--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -362,6 +362,195 @@
   font-family: 'Anton', sans-serif;
   box-sizing: border-box; }
 
+/*HEADER*/
+.header .nav {
+  font-family: "Anton", sans-serif;
+  line-height: 1.5;
+  font-weight: bolder;
+  text-align: center;
+  color: rgba(0, 0, 255, 0.62);
+  display: flex;
+  justify-content: left;
+  text-decoration: none;
+  font-size: x-large;
+  font-weight: bolder;
+  flex: wrap;
+  display: flex;
+  justify-content: left;
+  text-decoration: none;
+  font-size: x-large;
+  font-weight: bolder;
+  flex: wrap; }
+  .header .nav a {
+    color: black;
+    text-decoration: none;
+    margin: 5%; }
+    .header .nav a:hover {
+      color: white; }
+
+/*GRIDCONTAINER*/
+.gridContainer {
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+  grid-template-rows: repeat(4, 25%);
+  grid-template-areas: "section section section section" "main main  main main" "main main main main" "footer footer footer footer"; }
+  .gridContainer section {
+    grid-area: section; }
+    .gridContainer section main {
+      grid-area: main; }
+      .gridContainer section main footer {
+        grid-area: footer; }
+
+/*GRIDSECTION*/
+.gridSection {
+  font-family: "Anton", sans-serif;
+  line-height: 1.5;
+  font-weight: bolder;
+  text-align: center;
+  color: rgba(0, 0, 255, 0.62);
+  display: grid;
+  grid-template-areas: "gridSection gridSection gridSection gridSection";
+  background-color: aliceblue; }
+  .gridSection .gridSectionSlogan {
+    grid-area: slogan;
+    text-transform: uppercase;
+    font-size: large; }
+
+/*MAIN*/
+.gridMain {
+  display: grid;
+  grid-template-areas: "gridMain gridMain gridMain gridMain" "gridMain gridMain gridMain gridMain";
+  background-color: #AED6F1; }
+  .gridMain .gridMainText {
+    font-family: "Anton", sans-serif;
+    line-height: 1.5;
+    font-weight: bolder;
+    text-align: center;
+    color: rgba(0, 0, 255, 0.62);
+    grid-area: main;
+    margin: 2%; }
+
+/*imagen que hace parte de MAIN EN index*/
+.gridMainEs {
+  grid-area: main;
+  width: 480px;
+  height: 480px;
+  padding: 2%;
+  image-resolution: 40px;
+  border-radius: 30%;
+  margin-left: 20%;
+  border-color: rgba(0, 0, 255, 0.62);
+  border-width: 10px;
+  border-style: ridge; }
+
+/*FORMULARIO MAQUETADO CON BOOTSTRAP*/
+.gridMainForm {
+  border-radius: 2%;
+  border-color: rgba(0, 0, 255, 0.62);
+  border-width: 5px;
+  border-style: solid;
+  text-transform: capitalize;
+  padding: 10px;
+  margin: 10px;
+  display: gridMainForm;
+  background-color: azure; }
+
+/*FORMULARIO MAQUETADO CON CSS*/
+.gridMainForm1 {
+  border-radius: 2%;
+  border-color: rgba(0, 0, 255, 0.62);
+  border-width: 5px;
+  border-style: solid;
+  text-transform: capitalize;
+  padding: 10px;
+  margin: 10px;
+  display: gridMainForm;
+  background-color: azure;
+  /*nombre*/ }
+  .gridMainForm1 .form1 {
+    grid-area: form1;
+    margin: 20px;
+    /*Email*/ }
+    .gridMainForm1 .form1 .form2 {
+      grid-area: form2;
+      margin: 20px;
+      /*Comentarios*/ }
+      .gridMainForm1 .form1 .form2 .form3 {
+        grid-area: form3;
+        margin: 20px 20px 20px 20px;
+        /*boton de envio*/ }
+        .gridMainForm1 .form1 .form2 .form3 .form5 {
+          grid-area: form5;
+          margin: 20px;
+          text-align: center; }
+
+.gridMainArticle {
+  border-radius: 2%;
+  border-color: rgba(0, 0, 255, 0.62);
+  border-width: 5px;
+  border-style: solid;
+  text-transform: capitalize;
+  padding: 10px;
+  margin: 10px;
+  display: grid;
+  grid-template-areas: "main main main main";
+  background-color: #AED6F1;
+  text-align: center; }
+  .gridMainArticle .gridMainArticleUno {
+    grid-template-areas: "main";
+    text-align: justify; }
+    .gridMainArticle .gridMainArticleUno .gridMainArticleDos {
+      grid-template-areas: "main";
+      text-align: justify; }
+      .gridMainArticle .gridMainArticleUno .gridMainArticleDos .gridMainArticleTres {
+        grid-template-areas: "main";
+        text-align: justify; }
+
+/*COMIENZO DE MAINMEDIA y estilos aplicados al mismo la pagina de ACCESSO */
+.gridMainMedia {
+  display: gridMainMedia; }
+  .gridMainMedia .mediaVideo1 {
+    grid-area: mediavideo1;
+    margin: 10px 10px 10px 80px;
+    border-radius: 10px; }
+
+/*FOOTER*/
+.gridFooter {
+  display: grid;
+  grid-template-areas: "gridFooter gridFooter gridFooter gridFooter gridFooter";
+  justify-content: flex-end;
+  background-image: linear-gradient(to right, #1B4F72, #5DADE2, #AED6F1); }
+  .gridFooter .gridFooterText {
+    grid-area: footer;
+    text-align: right; }
+
+.gridFooterUno {
+  color: black;
+  text-decoration: none;
+  grid-area: footer;
+  width: 50%;
+  height: 60%;
+  padding: 5%; }
+  .gridFooterUno a:hover {
+    color: white; }
+
+.gridFooterDos {
+  color: black;
+  text-decoration: none;
+  grid-area: footer;
+  width: 50%;
+  height: 55%;
+  padding: 5%; }
+  .gridFooterDos a:hover {
+    color: white; }
+
+.gridFooterTres {
+  grid-area: footer;
+  font-size: xx-large;
+  font-weight: 900;
+  padding: 5%; }
+
+/*FULL RESPONSIVE*/
 @media only screen and (max-width: 767px) {
   .header {
     display: none; }
