--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -356,11 +356,22 @@
   font-weight: 900;
   padding: 5%; }
 
-:root {
+* {
   margin: 0;
   padding: 0;
   font-family: 'Anton', sans-serif;
   box-sizing: border-box; }
+
+/*GRIDCONTAINER*/
+.gridContainer {
+  display: grid;
+  grid-template-areas: "section section section section" "main main  main main" "main main main main" "footer footer footer footer"; }
+  .gridContainer section {
+    grid-area: section; }
+    .gridContainer section main {
+      grid-area: main; }
+      .gridContainer section main footer {
+        grid-area: footer; }
 
 /*HEADER*/
 .header .nav {
@@ -387,19 +398,6 @@
     margin: 5%; }
     .header .nav a:hover {
       color: white; }
-
-/*GRIDCONTAINER*/
-.gridContainer {
-  display: grid;
-  grid-template-columns: repeat(4, 25%);
-  grid-template-rows: repeat(4, 25%);
-  grid-template-areas: "section section section section" "main main  main main" "main main main main" "footer footer footer footer"; }
-  .gridContainer section {
-    grid-area: section; }
-    .gridContainer section main {
-      grid-area: main; }
-      .gridContainer section main footer {
-        grid-area: footer; }
 
 /*GRIDSECTION*/
 .gridSection {
@@ -552,21 +550,20 @@
 
 /*FULL RESPONSIVE*/
 @media only screen and (max-width: 767px) {
+  /*GRIDCONTAINER*/
+  .gridContainer {
+    display: grid;
+    grid-template-areas: "section" "main" "main" "footer"; }
+    .gridContainer section {
+      grid-area: section; }
+      .gridContainer section main {
+        grid-area: main; }
+        .gridContainer section main footer {
+          grid-area: footer; }
   .header {
     display: none; }
     .header .nav {
       display: none; }
-  .gridContainer {
-    display: grid;
-    grid-template-columns: repeat(1, 100%);
-    grid-template-columns: auto;
-    grid-template-areas: "section" "main" "main" "footer"; }
-    .gridContainer section {
-      grid-area: section; }
-    .gridContainer main {
-      grid-area: main; }
-    .gridContainer footer {
-      grid-area: footer; }
   /*H1 DE TODOS LOS HTML*/
   .gridSection {
     width: 180%;
@@ -677,6 +674,144 @@
   .gridFooter {
     display: grid;
     width: 180%;
+    grid-template-areas: "gridFooter";
+    justify-content: center;
+    font-size: large;
+    text-align: center; }
+  .gridFooterUno {
+    grid-area: footer; }
+  .gridFooterDos {
+    grid-area: footer; }
+  .gridFooterTres {
+    grid-area: footer;
+    font-weight: 900; }
+  .gridFooterText {
+    grid-area: footer; } }
+
+@media only screen and (max-width: 360px) {
+  /*GRIDCONTAINER*/
+  .gridContainer {
+    display: grid;
+    grid-template-areas: "section" "main " "main " "footer"; }
+    .gridContainer section {
+      grid-area: section; }
+      .gridContainer section main {
+        grid-area: main; }
+        .gridContainer section main footer {
+          grid-area: footer; }
+  .header {
+    display: none; }
+    .header .nav {
+      display: none; }
+  /*H1 DE TODOS LOS HTML*/
+  .gridSection {
+    width: 400%;
+    background-color: azure;
+    margin-top: 20%; }
+  /*H2 DE TODOS LOS HTML*/
+  .gridSectionSlogan {
+    width: 400%;
+    margin-top: 15%;
+    text-align: center; }
+  /*ESTILOS PARA MAIN*/
+  .gridMain {
+    display: grid;
+    grid-template-areas: "main";
+    width: 400%;
+    background-color: aliceblue; }
+    .gridMain .gridMainText {
+      font-family: "Anton", sans-serif;
+      line-height: 1.5;
+      font-weight: bolder;
+      text-align: center;
+      color: rgba(0, 0, 255, 0.62);
+      grid-template-areas: "main";
+      margin: 2%; }
+  /*imagen que hace parte de MAIN EN index*/
+  .gridMainEs {
+    grid-area: main;
+    width: 220px;
+    height: 220px;
+    padding: 2%;
+    image-resolution: 40px;
+    border-radius: 30%;
+    border-color: rgba(0, 0, 255, 0.62);
+    border-width: 10px;
+    border-style: ridge; }
+  /*ACA COMIENZA EL FORMULARIO conteneder-padre con cada uno de sus hijos en INDEX, COMENZAR Y ACCESSO. TAMBIEN SE APLICA AL FORM MAQUETADO CON BOOTSTRAP EN INDEX Y ACCESSO*/
+  .gridMainForm {
+    border-radius: 2%;
+    border-color: rgba(0, 0, 255, 0.62);
+    border-width: 5px;
+    border-style: solid;
+    text-transform: capitalize;
+    padding: 10px;
+    margin: 10px;
+    display: gridMainForm;
+    background-color: azure; }
+  .gridMainForm1 {
+    border-radius: 2%;
+    border-color: rgba(0, 0, 255, 0.62);
+    border-width: 5px;
+    border-style: solid;
+    text-transform: capitalize;
+    padding: 10px;
+    margin: 10px;
+    display: gridMainForm;
+    background-color: azure;
+    width: 100%;
+    /*Nombre*/ }
+    .gridMainForm1 .form1 {
+      grid-area: form1;
+      margin: 20px;
+      /*Email*/ }
+      .gridMainForm1 .form1 .form2 {
+        grid-area: form2;
+        margin: 20px;
+        /*Comentarios*/ }
+        .gridMainForm1 .form1 .form2 .form3 {
+          grid-area: form3;
+          margin: 20px 20px 20px 20px;
+          /*boton de envio*/ }
+          .gridMainForm1 .form1 .form2 .form3 .form5 {
+            grid-area: form5;
+            margin: 20px;
+            text-align: center; }
+  .gridMainArticle {
+    border-radius: 2%;
+    border-color: rgba(0, 0, 255, 0.62);
+    border-width: 5px;
+    border-style: solid;
+    text-transform: capitalize;
+    padding: 10px;
+    margin: 10px;
+    display: grid;
+    width: 100%;
+    grid-template-areas: "main";
+    background-color: #AED6F1;
+    text-align: center; }
+    .gridMainArticle .gridMainArticleUno {
+      grid-template-areas: "main";
+      text-align: justify;
+      text-align: center; }
+      .gridMainArticle .gridMainArticleUno .gridMainArticleDos {
+        grid-template-areas: "main";
+        text-align: justify; }
+        .gridMainArticle .gridMainArticleUno .gridMainArticleDos .gridMainArticleTres {
+          grid-template-areas: "main";
+          text-align: justify; }
+  /*COMIENZO DE MAINMEDIA y estilos aplicados al mismo la pagina de ACCESSO */
+  .gridMainMedia {
+    display: gridMainMedia;
+    width: 400%; }
+    .gridMainMedia .mediaVideo1 {
+      grid-area: mediavideo1;
+      width: 25%;
+      margin: 10px 10px 10px 10px;
+      border-radius: 10px; }
+  .gridFooter {
+    display: grid;
+    width: 400%;
     grid-template-areas: "gridFooter";
     justify-content: center;
     font-size: large;
